# EDB2_AV1

./: CMakeLists.txt  README.md  TempoMedio.cpp  TempoMedio.h  Timer.cpp  Timer.h  main.cpp
